force-app/main/default/objects/BackupProfile__c/BackupProfile__c.object-meta.xml
<CustomObject>
    <label>BackupProfile</label>
    <nameField>
        <displayFormat>USER-{YYYY}{MM}{00000}</displayFormat>
        <label>BackupProfile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BackupProfile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>