force-app/main/default/objects/BackupProfile__c/fields/BackupProfileId__c.field-meta.xml
<CustomField>
    <fullName>BackupProfileId__c</fullName>
    <description>로그인유저 프로필 백업</description>
    <label>BackupProfileId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>