force-app/main/default/objects/BackupProfile__c/fields/IsRestoreSuccess__c.field-meta.xml
<CustomField>
    <fullName>IsRestoreSuccess__c</fullName>
    <formula>IF(LEN(UpdateErrMsg__c)  &gt; 0,
				&apos;실패&apos;,
		  IF(RestoreDateTime__c != null, &apos;성공&apos;,&apos;&apos;))</formula>
    <label>IsRestoreSuccess</label>
    <type>Text</type>
</CustomField>