force-app/main/default/objects/BackupProfile__c/fields/RestoreDateTime__c.field-meta.xml
<CustomField>
    <fullName>RestoreDateTime__c</fullName>
    <description>프로필 원복 시간</description>
    <label>RestoreDateTime</label>
    <type>DateTime</type>
</CustomField>