force-app/main/default/objects/BackupProfile__c/fields/UpdateErrMsg__c.field-meta.xml
<CustomField>
    <fullName>UpdateErrMsg__c</fullName>
    <description>프로필 원복 시 에러날 경우 메시지</description>
    <label>UpdateErrMsg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>